# telegram_similar_channels_finder

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  results_20250402_231729.json  results_20250403_004001.json  results_20250403_021224.json  results_20250403_022244.json  telegram_crawler.py  test_telegram_auth.py
attached_assets/: Pasted--I-ll-create-a-comprehensive-Python-script-for-the-Telegram-Similar-Channels-Crawler-that-1743520888784.txt  Pasted--usr-bin-env-python-coding-utf-8-Telegram-Similar-Channels-Finder-Script-This-script-use-1743521566627.txt  Pasted-Results-object-exists-total-channels-3-successful-channels-3-failed-channels-0-total--1743526731577.txt  Pasted-alternative-1-usr-bin-env-python-coding-utf-8-Telegram-Similar-Channels-Finder-Script--1743521642326.txt
templates/: about.html  config.html  crawl_file.html  crawl_manual.html  crawl_sheets.html  index.html  layout.html  results.html  run_crawler.html
